--- a/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic/Brushes.xaml
+++ b/ExtendedWPFToolkitSolution/Src/WPFToolkit.Extended/Themes/Generic/Brushes.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" >
-
-    <SolidColorBrush x:Key="ControlNormalBackgroundKey" Color="#FFFFFF" PresentationOptions:Freeze="true"/>
-    <SolidColorBrush x:Key="ControlDisabledBackgroundKey" Color="#F4F4F4" PresentationOptions:Freeze="true"/>
-
-    <LinearGradientBrush x:Key="ControlNormalBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
+                    xmlns:local="clr-namespace:Microsoft.Windows.Controls"
+                    xmlns:PresentationOptions="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+                    xmlns:themes="clr-namespace:Microsoft.Windows.Controls.Themes">
+    
+    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBackgroundKey}" Color="#FFFFFF" PresentationOptions:Freeze="true"/>
+    <SolidColorBrush x:Key="{x:Static themes:ResourceKeys.ControlDisabledBackgroundKey}" Color="#F4F4F4" PresentationOptions:Freeze="true"/>
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlNormalBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FFabadb3" Offset="0" />
@@ -15,8 +16,17 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-
-    <LinearGradientBrush x:Key="ControlMouseOverBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true" >
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlMouseOverBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true" >
+        <LinearGradientBrush.GradientStops>
+            <GradientStopCollection>
+                <GradientStop Color="#FF3d7bad" Offset="0" />
+                <GradientStop Color="#FFa4c9e3" Offset="0.05000000074505806" />
+                <GradientStop Color="#FFa4c9e3" Offset="0.949999988079071" />
+                <GradientStop Color="#FFb7d9ed" Offset="1" />
+            </GradientStopCollection>
+        </LinearGradientBrush.GradientStops>
+    </LinearGradientBrush>    
+    <LinearGradientBrush x:Key="{x:Static themes:ResourceKeys.ControlFocusedBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FF3d7bad" Offset="0" />
@@ -27,29 +37,8 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="ControlFocusedBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1" PresentationOptions:Freeze="true">
-        <LinearGradientBrush.GradientStops>
-            <GradientStopCollection>
-                <GradientStop Color="#FF3d7bad" Offset="0" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.05000000074505806" />
-                <GradientStop Color="#FFa4c9e3" Offset="0.949999988079071" />
-                <GradientStop Color="#FFb7d9ed" Offset="1" />
-            </GradientStopCollection>
-        </LinearGradientBrush.GradientStops>
-    </LinearGradientBrush>
-
-
-
-
-
-
-
-
-
-
-
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnNormalOuterBorderFillKey" Color="#FFABADB3"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnNormalInnerBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalOuterBorderKey}" Color="#FFABADB3"/>
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Offset="0" Color="#FFfcfcfc"/>
@@ -59,7 +48,7 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnNormalCenterFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonNormalBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Offset="0" Color="#FFf2f2f2"/>
@@ -70,8 +59,8 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnHottrackOuterBorderFillKey" Color="#FF3C7FB1"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnHottrackInnerBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverOuterBorderKey}" Color="#FF3C7FB1"/>
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FFfafdfe" Offset="0" />
@@ -81,7 +70,7 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnHottrackCenterFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonMouseOverBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FFeaf6fd" Offset="0" />
@@ -91,8 +80,9 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnPressedOuterBorderFillKey" Color="#FF2C628B"/>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnPressedInnerBorderFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedOuterBorderKey}" Color="#FF2C628B"/>
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedInnerBorderKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FF9eb0ba" Offset="0" />
@@ -103,7 +93,7 @@
             </GradientStopCollection>
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
-    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnPressedCenterFillKey" StartPoint="0.5,0" EndPoint="0.5,1">
+    <LinearGradientBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.ButtonPressedBackgroundKey}" StartPoint="0.5,0" EndPoint="0.5,1">
         <LinearGradientBrush.GradientStops>
             <GradientStopCollection>
                 <GradientStop Color="#FFe5f4fc" Offset="0" />
@@ -114,14 +104,7 @@
         </LinearGradientBrush.GradientStops>
     </LinearGradientBrush>
 
-    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="DropdownBtnGlyphNormalForegroundFillKey" Color="#FF000000" />
-
-
-
-
-
-
-
-    <CornerRadius x:Key="SpinButtonCornerRadiusKey" TopLeft="0" TopRight="0" BottomRight="0" BottomLeft="0" PresentationOptions:Freeze="true" />
+    <SolidColorBrush PresentationOptions:Freeze="true" x:Key="{x:Static themes:ResourceKeys.GlyphNormalForegroundKey}" Color="#FF000000" />
+    <CornerRadius x:Key="{x:Static themes:ResourceKeys.SpinButtonCornerRadiusKey}" TopLeft="0" TopRight="0" BottomRight="0" BottomLeft="0" PresentationOptions:Freeze="true" />    
 
 </ResourceDictionary>
